--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
    <head>
         <!-- stylesheets and metadata go here -->
-       <title>My CS130 Homepage</title>       
+       <title>Nick Hughes' CS130 Homepage</title>       
        <link rel="stylesheet" href="style.css">
    </head>
    <body>
@@ -14,6 +14,7 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
+                <a href="/Users/nickhughes/Documents/School/CS130/tutorials/tutorial01/index.html">Tutorials</a>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
