--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                <a href="/Users/nickhughes/Documents/School/CS130/tutorials/tutorial01/index.html">Tutorials</a>
+                <a href="/Users/nickhughes/Documents/School/CS130/tutorials/tutorial01/index.html">Tutorial 1</a>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
