--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                <a href="/Users/nickhughes/Documents/School/CS130/tutorials/tutorial01/index.html">Tutorial 1</a>
+                <a href="/CS130-coursework/tutorials/tutorial01/index.html">Tutorial 1</a>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
                     here (if applicable)
                 -->
             </section>
+            <section id="in-class work"
+                <h2>In-Class Work</h2>
+                <a href="/Users/nickhughes/Documents/School/CS130/lectures/lecture02/index.html">Lecture 2</a>
+                <a href="/Users/nickhughes/Documents/School/CS130/lectures/lecture04/index.html">Lecture 4</a>
             <section id="homework">
                 <h2>Homework</h2>
                 <!-- 
@@ -30,6 +34,12 @@
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
+                <a href="https://www.ibm.com/resources/activations/harmonic-state">IBM Watson: The Harmonic State</a>
+                <a href="https://www.zillow.com/">Zillow</a>
+                <a href="https://www.dewalt.com/">DeWalt</a>
+                <a href="https://www.dollarshaveclub.com/get-started/quiz/guest-member-profile">Dollar Shave Club</a>
+                <a href="https://www.razer.com/">Razer</a>
+                <a href="https://www.formula1.com/">Formula 1 Homepage</a>
                 <!-- 
                     Links to 5-10 websites that inspire you
                 -->
