--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                     here (if applicable)
                 -->
             </section>
-            <section id="in-class work"
+            <section id="in-class work">
                 <h2>In-Class Work</h2>
                 <a href="/Users/nickhughes/Documents/School/CS130/lectures/lecture02/index.html">Lecture 2</a>
                 <a href="/Users/nickhughes/Documents/School/CS130/lectures/lecture04/index.html">Lecture 4</a>
+            </section>
             <section id="homework">
                 <h2>Homework</h2>
                 <!-- 
