--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
        <!-- HTML content tags go here. Change anything you want! -->
        <header>
-           <h1>My CS130 Homepage</h1>
+           <h1>Nick Hughes' CS130 Homepage</h1>
        </header> 
        <main>
             <section id="tutorials">
@@ -21,10 +21,12 @@
                     here (if applicable)
                 -->
             </section>
-            <section id="in-class work">
+            <section id="in-class_work">
                 <h2>In-Class Work</h2>
                 <a href="/CS130-coursework/lectures/lecture02/index.html">Lecture 2</a>
+                <br>
                 <a href="/CS130-coursework/lectures/lecture04/index.html">Lecture 4</a>
+                <br>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
@@ -36,11 +38,17 @@
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
                 <a href="https://www.ibm.com/resources/activations/harmonic-state">IBM Watson: The Harmonic State</a>
+                <br>
                 <a href="https://www.zillow.com/">Zillow</a>
+                <br>
                 <a href="https://www.dewalt.com/">DeWalt</a>
+                <br>
                 <a href="https://www.dollarshaveclub.com/get-started/quiz/guest-member-profile">Dollar Shave Club</a>
+                <br>
                 <a href="https://www.razer.com/">Razer</a>
+                <br>
                 <a href="https://www.formula1.com/">Formula 1 Homepage</a>
+                <br>
                 <!-- 
                     Links to 5-10 websites that inspire you
                 -->
