--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <section id="tutorials">
                 <h2>Tutorials</h2>
                 <a href="/CS130-coursework/tutorials/tutorial01/index.html">Tutorial 1</a>
+                <a href="/CS130-coursework/tutorials/tutorial04/index.html">Tutorial 4</a>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
