--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <br>
                 <a href="/CS130-coursework/lectures/lecture04/index.html">Lecture 4</a>
                 <br>
+                <a href="/CS130-coursework/lectures/lecture07/index.html">Lecture 4</a>
+                <br>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
