--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <br>
                 <a href="/CS130-coursework/lectures/lecture07/index.html">Lecture 7</a>
                 <br>
+                <a href="/CS130-coursework/lectures/lecture08/index.html">Lecture 8</a>
+                <br>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
