--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
                 <br>
                 <a href="/CS130-coursework/lectures/lecture04/index.html">Lecture 4</a>
                 <br>
-                <a href="/CS130-coursework/lectures/lecture07/index.html">Lecture 7</a>
+                <a href="CS130-coursework/lecture07/01-box-model/index.html">Lecture 7 - 01 Box Model</a>
+                <br>
+                <a href="CS130-coursework/lecture07/02-flexbox/index.html">Lecture 7 - 02 Flexbox</a>
+                <br>
+                <a href="CS130-coursework/lecture07/03-flexbox-media-query/index.html">Lecture 7 - 03 Flexbox Media Query</a>
+                <br>
+                <a href="CS130-coursework/lecture07/04-navbar/index.html">Lecture 7 - 04 Navbar</a>
+                <br>
+                <a href="CS130-coursework/lecture07/05-flexbox-with-navigation/index.html">Lecture 7 - 05 Flexbox With Navigation</a>
                 <br>
                 <a href="/CS130-coursework/lectures/lecture08/index.html">Lecture 8</a>
                 <br>
