--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             </section>
             <section id="homework">
                 <h2>Homework</h2>
+                <a href="/CS130-coursework/homework/hw02/index.html">Homework 2</a>
+                <br>
                 <!-- 
                     Links to your Homework assignments go here.
                     When you submit a new HW assignment, add a link to it here (if applicable)
