--- a/homework/hw02/index.html
+++ b/homework/hw02/index.html
@@ -34,9 +34,9 @@
                     <i class="far fa-user"></i> Profile</a>
             </header>
             <nav>
-                <a href="#">Playlists</a>
-                <a href="#">Albums</a>
-                <a class="selected" href="#">Artists</a>
+                <a href="#" id="playlists">Playlists</a>
+                <a href="#" id="albums">Albums</a>
+                <a class="selected" href="#" id="artists">Artists</a>
             </nav>
             <article id="featured-content">
                 <section class="artist-card" tabindex="0">
