--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <br>
                 <a href="/CS130-coursework/tutorials/tutorial04/index.html">Tutorial 4</a>
                 <br>
+                <a href="/CS130-coursework/tutorials/tutorial05/01-font-switcher/index.html">Tutorial 5 - 01 Font Switcher</a>
+                <br>
+                <a href="/CS130-coursework/tutorials/tutorial05/02-theme-switcher/index.html">Tutorial 5 - 02 Theme Switcher</a>
+                <br>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
