--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <br>
                 <a href="/CS130-coursework/tutorials/tutorial05/02-theme-switcher/index.html">Tutorial 5 - 02 Theme Switcher</a>
                 <br>
+                <a href="/CS130-coursework/tutorials/tutorial06/index.html">Tutorial 6</a>
+                <br>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
