--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                 <h2>Homework</h2>
                 <a href="/CS130-coursework/homework/hw02/index.html">Homework 2</a>
                 <br>
+                <a href="/CS130-coursework/homework/hw03/index.html">Homework 3</a>
+                <br>
                 <!-- 
                     Links to your Homework assignments go here.
                     When you submit a new HW assignment, add a link to it here (if applicable)
