--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <br>
                 <a href="/CS130-coursework/homework/hw03/index.html">Homework 3</a>
                 <br>
+                <a href="/CS130-coursework/homework/hw04/your_task/index.html">Homework 4/Tutorial 7</a>
+                <br>
                 <!-- 
                     Links to your Homework assignments go here.
                     When you submit a new HW assignment, add a link to it here (if applicable)
