--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                     When you submit a new HW assignment, add a link to it here (if applicable)
                 -->
             </section>
+            <section id = "project">
+                <h2>Final Project</h2>
+                <a href="/CS130-coursework/final_project/homepage.html">Final Project</a>
+                <br>
+            </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
                 <a href="https://www.ibm.com/resources/activations/harmonic-state">IBM Watson: The Harmonic State</a>
