--- a/final_project/homepage.html
+++ b/final_project/homepage.html
@@ -11,6 +11,14 @@
            <h1>A Beginner's Guide to Electronic Music: By Nicholas Hughes</h1>
        </header> 
        <main>
+           <section id="description">
+               I've loved listening to electronic music for a long time now. Electronic dance music, or "EDM," 
+               has proliferated itself into many areas of everyday life like commercials and social media, but 
+               still many people have no idea just how broad of a type of music it is. This is your one-stop shop
+               for beginning to understand the differences between a handful of electronic genres. Below, you will
+               find links to a brief description of each genre along with a few songs handpicked by me as a genre 
+               showcase. 
+           </section>
             <section id="genres">
                 <h2>Genres</h2>
                 <a href="/CS130-coursework/final_project/genres/commercial.html">Commercial House</a>
@@ -42,6 +50,8 @@
                 <a href="/CS130-coursework/final_project/genres/dnb.html">Drum & Bass</a>
                 <br>
                 <a href="/CS130-coursework/final_project/genres/breaks.html">Breakbeat</a>
+                <br>
+                <a href="/CS130-coursework/final_project/genres/synth.html">Synthwave</a>
                 <br>
             </section>
         </main>
