--- a/homework/hw04/your_task/index.html
+++ b/homework/hw04/your_task/index.html
@@ -25,7 +25,8 @@
                 <input type="search" 
                     placeholder="Search for Artists or Songs" 
                     id="search" 
-                    value="" />
+                    value="" 
+                    aria-label = "search bar"/>
             </header>
             <article id="featured-content">
                 <section id="artist-section">
@@ -66,3 +67,5 @@
         </footer>
     </body>
 </html>
+
+<html lang = "en"></html>
