--- a/final_project/homepage.html
+++ b/final_project/homepage.html
@@ -19,36 +19,39 @@
                find links to a brief description of each genre along with a few songs handpicked by me as a genre 
                showcase. 
            </section>
-            <section id="genres">
+            <section>
                 <h2>Genres</h2>
-                <a href="/CS130-coursework/final_project/genres/commercial.html">Commercial House</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/deep.html">Deep House</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/prog.html">Progressive House</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/electro.html">Electro House</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/dubstep.html">Dubstep</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/meldub.html">Melodic Dubstep</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/hardcore.html">Hardcore</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/glitch.html">Glitch Hop</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/trap.html">Trap</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/future.html">Future Bass</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/garage.html">Garage</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/trance.html">Trance</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/dnb.html">Drum & Bass</a>
-                <br>
-                <a href="/CS130-coursework/final_project/genres/breaks.html">Breakbeat</a>
-                <br>
+                <div id="genres">
+                    <a href="genres/commercial.html">Commercial House</a>
+                    <br>
+                    <a href="genres/deep.html">Deep House</a>
+                    <br>
+                    <a href="genres/prog.html">Progressive House</a>
+                    <br>
+                    <a href="genres/electro.html">Electro House</a>
+                    <br>
+                    <a href="genres/dubstep.html">Dubstep</a>
+                    <br>
+                    <a href="genres/meldub.html">Melodic Dubstep</a>
+                    <br>
+                    <a href="genres/hardcore.html">Hardcore</a>
+                    <br>
+                    <a href="genres/glitch.html">Glitch Hop</a>
+                    <br>
+                    <a href="genres/trap.html">Trap</a>
+                    <br>
+                    <a href="genres/future.html">Future Bass</a>
+                    <br>
+                    <a href="genres/garage.html">Garage</a>
+                    <br>
+                    <a href="genres/trance.html">Trance</a>
+                    <br>
+                    <a href="genres/dnb.html">Drum & Bass</a>
+                    <br>
+                    <a href="genres/breaks.html">Breakbeat</a>
+                    <br>
+                </div>
+                
             </section>
         </main>
    </body>
