--- a/final_project/genres/future.html
+++ b/final_project/genres/future.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Future Bass</title>
-        <link rel="stylesheet" ref="fb_style.css">
+        <link rel="stylesheet" href="style_1.css">
         
     </head>
     <body>
