--- a/final_project/genres/future.html
+++ b/final_project/genres/future.html
@@ -5,33 +5,39 @@
         <link rel="stylesheet" href="style_1.css">
         
     </head>
-    <body>
+    <body id="container">
 
-        <header>
+        <header id="title">
             <h1>Future Bass</h1>
         </header> 
         <main>
             <section id="description">
-                Future Bass is a genre that has really taken off in the last few years within the electronic music 
+                <p>Future Bass is a genre that has really taken off in the last few years within the electronic music 
                 scene. A lighter sounding version of its sister genre, trap, future bass is particularly codified 
                 by warm, stabby synths, buzzing baselines, inviting melodies, and filtered chord progressions with 
                 a fair amount of reverb. This genre is known for taking the harsher sounds of trap and dubstep and 
                 utilizing a similar beat structure with happier, lighter, perhaps even bouncier sounds. The tempos 
-                generally sit within the 130 to 160 range, providing faster yet still danceable tracks. A few 
+                generally sit within the 130 to 160 BPM range, providing faster yet still danceable tracks. A few 
                 notable artists who have seen success with the genre include The Chainsmokers, Flume, and Louis the 
-                Child.
+                Child. </p>
             </section>
              <section id="player">
-                 
+                 <h1>Future Bass Highlight</h1>
+                 <section id="song">
+
+                 </section>
              </section>
              <section id="opinion">
-                The song I have chosen to represent Future Bass is a song called “Overflow” written by smle with 
+                <p>The song I have chosen to represent Future Bass is a song called “Overflow” written by smle with 
                 vocals performed by Helen Tess. What I think this song does well to capture the genre is its 
                 inherent bounciness. The wavy production evident in the song’s synths gives the song a very groovy 
                 feel, and coupled with Tess’ light and airy vocals create an infectious melody that makes it hard 
                 not to bob your head. Comparing this to a trap or a dubstep track, it becomes more clear what I 
                 meant by taking stylistic elements of those genres and putting a lighter spin on them. Relaxing 
-                yet captivating, “Overflow” is a must-use in summer playlists.
+                yet captivating, “Overflow” is a must-use in summer playlists. </p>
+             </section>
+             <section id="playlist">
+                 <p>If you like what you're listening to, check out this Future Bass Sample Playlist!</p>
              </section>
          </main>
     </body>
