--- a/final_project/homepage.html
+++ b/final_project/homepage.html
@@ -4,6 +4,7 @@
         
        <title>A Beginner's Guide to Electronic Music</title>       
        <link rel="stylesheet" href="style.css">
+       <script type="text/javascript" src="scripts.js" defer></script>
    </head>
    <body>
 
