--- a/final_project/genres/commercial.html
+++ b/final_project/genres/commercial.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Commerical House</title>
-        <link rel="stylesheet" ref="commercial_style.css">
+        <title>Commercial House</title>
+        <link rel="stylesheet" href="style_1.css">
         
     </head>
+    <body id="commercial_container">
+        <button id="back" onclick="window.location.href='../homepage.html'">Return to Homepage</button>
+        <header id="title">
+            <h1>Commercial House</h1>
+        </header> 
+        <main>
+            <section id="description">
+                <p>Commercial House is an aptly named genre of electronic music that encapsulates a variety of 
+                    different house tracks that have a “commercial” feel to them. Generally centered around 128 
+                    BPM, this type of house music represents the intersection between top 40 radio hits and house 
+                    music, hence “commercial.” As such, many house tracks that people know very well can be tagged 
+                    with this moniker, like “Levels” by Avicii. Radio-friendly vocals, catchy melodies, the classic 
+                    4-on-the-floor beat structure, and hard-hitting yet danceable toplines are the key features of 
+                    this genre. Once widely referred to as “Progressive House,” that title already had a home with 
+                    a much different sounding branch of house music. This genre of music is really more of a 
+                    container for house music that has found its way into mainstream listening, but the 
+                    similarities between those successes were enough to warrant a new name. Some artists you may 
+                    have heard of that have produced this type of music include David Guetta, Calvin Harris, and 
+                    Tiësto.
+                </p>
+            </section>
+            <section id="player">
+                 <h1>Commercial House Highlight</h1>
+                 <section id="song">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6OiZOyPJTWx7DorS1hdsY3?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                 </section>
+             </section>
+            <section id="opinion">
+                <p>I really do love this song. “Ghost in the Machine” by Trivecta isn’t a song many of you will 
+                    have heard of, but is a perfect example of a radio-friendly tune with top notch production. 
+                    Fantastic uncredited vocals from RØRY and an infectious melody over a house beat make this a 
+                    song anyone would have a good time listening to. Boasting a somewhat euphoric feel to its 
+                    instrumental, this track is perfect for both radio play and festival listening. This truly 
+                    makes me feel like I’m listening to 2012 Calvin Harris for the first time again, which is 
+                    impressive considering the more modern production value. It’s simply a shame it didn’t blow 
+                    up in the mainstream like it deserves to.
+                </p>
+             </section>
+            <section id="signoff">
+                <p>If you like what you're listening to, check out this Commercial House Sample Playlist!</p>
+             </section>
+            <section id="playlist">
+                 <br>
+                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/06bLoLLH4djtD2vuTcoro2?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>             </section>
+         </main>
+    </body>
 </html>
