--- a/final_project/genres/future.html
+++ b/final_project/genres/future.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>Future Bass</title>
-        <link rel="stylesheet" href="style_1.css">
+        <link rel="stylesheet" href="style_2.css">
         
     </head>
-    <body id="container">
-
+    <body id="future_container">
+        <button id="back" onclick="window.location.href='../homepage.html'">Return to Homepage</button>
         <header id="title">
             <h1>Future Bass</h1>
         </header> 
@@ -21,13 +21,13 @@
                 notable artists who have seen success with the genre include The Chainsmokers, Flume, and Louis the 
                 Child. </p>
             </section>
-             <section id="player">
+            <section id="player">
                  <h1>Future Bass Highlight</h1>
                  <section id="song">
-
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4utEGWJt4VqYIQuoVelLqI?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                  </section>
              </section>
-             <section id="opinion">
+            <section id="opinion">
                 <p>The song I have chosen to represent Future Bass is a song called “Overflow” written by smle with 
                 vocals performed by Helen Tess. What I think this song does well to capture the genre is its 
                 inherent bounciness. The wavy production evident in the song’s synths gives the song a very groovy 
@@ -36,8 +36,12 @@
                 meant by taking stylistic elements of those genres and putting a lighter spin on them. Relaxing 
                 yet captivating, “Overflow” is a must-use in summer playlists. </p>
              </section>
-             <section id="playlist">
-                 <p>If you like what you're listening to, check out this Future Bass Sample Playlist!</p>
+            <section id="signoff">
+                <p>If you like what you're listening to, check out this Future Bass Sample Playlist!</p>
+             </section>
+            <section id="playlist">
+                 <br>
+                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3w8q7eegJqNPQg5DlnASbd?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
              </section>
          </main>
     </body>
